--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /* RESET */
+
+[v-cloak] {
+    display: none;
+}
+
 ul {
     margin: 0;
     padding: 0;
@@ -18,36 +23,130 @@ img {
 /* STILE */
 
 body {
-    background: rgb(255, 255, 255);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 48%, rgba(254, 170, 201, 1) 100%);
     height: 100vh;
+    overflow: hidden;
+
 }
+
+.scroller {
+    overflow-y: scroll;
+    scrollbar-color: #0A4C95 #C2D2E4;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+.dark-theme {
+    --bg-primary: rgb(12, 12, 12);
+    --bg-secondary: rgb(255, 255, 255);
+    --invert: 1;
+}
+
+.light-theme {
+    --bg-primary: rgb(255, 255, 255);
+    --bg-secondary: rgb(12, 12, 12);
+    --invert: 0;
+
+}
+
+.invert {
+    filter: invert(var(--invert));
+    transition: filter 0.3s ease-in-out;
+}
+
+.modal-content {
+    background-color: var(--bg-primary) !important;
+}
+
+/* 
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: radial-gradient(circle, rgb(242, 181, 203) 50%, rgba(206, 206, 206, 0) 100%);
+    border-radius: 10px;
+} */
+
 
 /* HEADER */
 
+#app {
+    height: 100%;
+
+}
+
+.wrapper {
+    height: 100%;
+    background: linear-gradient(180deg, var(--bg-primary) 50%, transparent 100%);
+    color: var(--bg-secondary);
+    opacity: var(--opacity);
+    transition: all 0.3s ease-in-out;
+}
+
 .logo {
-    width: 200px;
-    margin: 0 auto;
+    width: 150px;
+}
+
+header {
+    height: 150px;
 }
 
 /* MAIN */
+
+main {
+    height: calc(100vh - 150px);
+}
+
+.trending-now {
+    font-size: 18px;
+    letter-spacing: 15px;
+    font-weight: 600;
+}
+
+.add {
+    all: unset;
+    padding: 20px 30px;
+    border-radius: 20px;
+    background: #f0f0f0;
+    box-shadow: -5px -5px 50px #ddddddc6, 5px 5px 50px #ffffffc5;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(200, 200, 200)
+}
+
+.discs {
+    padding: 20px 0;
+    overflow-y: auto;
+    flex-flow: row;
+}
+
+.disc {
+    height: fit-content;
+}
 
 .cover {
     width: 100%;
     border-radius: 10px;
     overflow: hidden;
-
 }
 
 .cover-btn {
     all: unset;
-    width: 65%;
+    width: 100%;
     transition: all 0.5s;
 }
 
 .cover-btn:hover {
     filter: brightness(1.1);
     transform: scale(1.05);
+}
+
+.author {
+    font-size: 14px;
 }
 
 .canvas-cover {
@@ -85,4 +184,166 @@ body {
     .cover-btn {
         width: 100%;
     }
+}
+
+/* ----------------------- */
+
+.scrolling-container {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+
+.scroll-snap {
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+}
+
+
+
+
+
+
+
+.background-spinner {
+    position: absolute;
+    transform: scale(25);
+    bottom: 0;
+    right: 48%;
+    z-index: -5;
+}
+
+.spinner {
+    background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
+    width: 100px;
+    height: 100px;
+    animation: spinning82341 5s linear infinite;
+    text-align: center;
+    border-radius: 50px;
+    filter: blur(10px);
+    box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+}
+
+.spinner1 {
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    filter: blur(20px);
+}
+
+@keyframes spinning82341 {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.checkbox-wrapper-5 .check {
+    margin-top: 5px;
+    --size: 25px;
+    position: relative;
+    background: linear-gradient(90deg, #c999f0, #9088ff);
+    line-height: 0;
+    perspective: 400px;
+    font-size: var(--size);
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"],
+.checkbox-wrapper-5 .check label,
+.checkbox-wrapper-5 .check label::before,
+.checkbox-wrapper-5 .check label::after,
+.checkbox-wrapper-5 .check {
+    appearance: none;
+    display: inline-block;
+    border-radius: var(--size);
+    border: 0;
+    transition: .35s ease-in-out;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.checkbox-wrapper-5 .check label {
+    width: calc(2.2 * var(--size));
+    height: var(--size);
+    background: #d7d7d7;
+    overflow: hidden;
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"] {
+    position: absolute;
+    z-index: 1;
+    width: calc(.8 * var(--size));
+    height: calc(.8 * var(--size));
+    top: calc(.1 * var(--size));
+    left: calc(.1 * var(--size));
+    background: linear-gradient(45deg, #dedede, #ffffff);
+    box-shadow: 0 6px 7px rgba(0, 0, 0, 0.3);
+    outline: none;
+    margin: 0;
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked {
+    left: calc(1.3 * var(--size));
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked+label {
+    background: transparent;
+}
+
+.checkbox-wrapper-5 .check label::before,
+.checkbox-wrapper-5 .check label::after {
+    content: "· ·";
+    position: absolute;
+    overflow: hidden;
+    left: calc(.15 * var(--size));
+    top: calc(.5 * var(--size));
+    height: var(--size);
+    letter-spacing: calc(-0.04 * var(--size));
+    color: #9b9b9b;
+    font-family: "Times New Roman", serif;
+    z-index: 2;
+    font-size: calc(.6 * var(--size));
+    border-radius: 0;
+    transform-origin: 0 0 calc(-0.5 * var(--size));
+    backface-visibility: hidden;
+}
+
+.checkbox-wrapper-5 .check label::after {
+    content: "●";
+    top: calc(.65 * var(--size));
+    left: calc(.2 * var(--size));
+    height: calc(.1 * var(--size));
+    width: calc(.35 * var(--size));
+    font-size: calc(.2 * var(--size));
+    transform-origin: 0 0 calc(-0.4 * var(--size));
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked+label::before,
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked+label::after {
+    left: calc(1.55 * var(--size));
+    top: calc(.4 * var(--size));
+    line-height: calc(.1 * var(--size));
+    transform: rotateY(360deg);
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked+label::after {
+    height: calc(.16 * var(--size));
+    top: calc(.55 * var(--size));
+    left: calc(1.6 * var(--size));
+    font-size: calc(.6 * var(--size));
+    line-height: 0;
 }
