--- a/style.css
+++ b/style.css
@@ -140,7 +140,9 @@ main {
     flex-wrap: nowrap;
 }
 
-
+.button-wrapper {
+    position: relative;
+}
 
 .cover {
     width: 100%;
@@ -154,10 +156,17 @@ main {
     transition: all 0.5s;
 }
 
-.cover-btn:hover {
-    filter: brightness(1.1);
+
+.button-wrapper:hover .heart-container {
+    opacity: 1;
+}
+
+.button-wrapper:hover .cover-btn {
+    filter: brightness(0.7);
     transform: scale(1.05);
 }
+
+
 
 .author {
     font-size: 14px;
@@ -361,4 +370,118 @@ main {
     left: calc(1.6 * var(--size));
     font-size: calc(.6 * var(--size));
     line-height: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.heart-container {
+    margin: 0 auto;
+    --heart-color: rgb(255, 255, 255);
+    --like-color: rgb(255, 37, 77);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    transition: .3s;
+    z-index: 15;
+    opacity: 0;
+
+}
+
+.heart-container .checkbox {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 20;
+    cursor: pointer;
+}
+
+.heart-container .svg-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.heart-container .svg-outline {
+    fill: var(--heart-color);
+    position: absolute;
+}
+
+.heart-container .svg-filled {
+    fill: var(--like-color);
+    position: absolute;
+    transform: scale(1.1);
+}
+
+.heart-container .svg-filled {
+    animation: keyframes-svg-filled 1s;
+    display: none;
+}
+
+.heart-container .svg-celebrate {
+    position: absolute;
+    animation: keyframes-svg-celebrate .5s;
+    animation-fill-mode: forwards;
+    display: none;
+    stroke: var(--heart-color);
+    fill: var(--like-color);
+    stroke-width: 2px;
+}
+
+.heart-container .checkbox:checked~.svg-container .svg-filled {
+    display: block
+}
+
+.heart-container .checkbox:checked~.svg-container .svg-celebrate {
+    display: block
+}
+
+@keyframes keyframes-svg-filled {
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.3);
+    }
+
+    50% {
+        transform: scale(1.1);
+        filter: brightness(1.5);
+    }
+}
+
+@keyframes keyframes-svg-celebrate {
+    0% {
+        transform: scale(0);
+    }
+
+    50% {
+        opacity: 1;
+        filter: brightness(1.5);
+    }
+
+    100% {
+        transform: scale(1.4);
+        opacity: 0;
+        display: none;
+    }
 }
